# simple-rag

./: .gitignore  AGENTS.md  Gemfile  README.md  example_config.json  run-index  run-server  simple-rag.gemspec
docs/: 20260601-retrieval-rewrite.md
exe/: run-index  run-index-map  run-index-map-py  run-index-map-v2  run-migrate  run-query  run-server  run-setup
exe/public/: duplicate.html  graph.html  map.html  (+6 more)
lib/: config_loader.rb  config_path_resolver.rb  ollama_service.rb  provider_env_validator.rb  query_helpers.rb  query_server_client.rb  simple_rag.rb
llm/: embedding.rb  gemini.rb  http.rb  llm.rb  ollama.rb  openai.rb  openrouter.rb
public/: q.html
python/: pyproject.toml
python/simple_rag_map/: __init__.py  cli.py  config.py  graph.py  labels.py  llm.py  pipeline.py  readers.py
python/simple_rag_map_v2/: __init__.py  cli.py  communities.py  config.py  debug.py  graph.py  io.py  labels.py  layout.py  llm.py  schema.py  terrain.py  vectors.py
readers/: check-reader.rb  journal.rb  markdown.rb  note.rb  reader.rb  text.rb
server/: article.rb  cache.rb  discuss.rb  duplicate.rb  memory.rb  retrieval_pipeline.rb  retriever.rb  synthesizer.rb
storage/: file_index.rb  index_cache.rb  mem.rb  sqlite_index.rb
test/: cache_test.rb  chunk_utils_test.rb  duplicate_test.rb  gemspec_test.rb  journal_reader_test.rb  markdown_reader_test.rb  markdown_utils_test.rb  ollama_test.rb  provider_lifecycle_test.rb  query_server_client_test.rb  retrieval_pipeline_test.rb  retrieval_touchpoints_test.rb  retriever_test.rb  sqlite_index_test.rb  text_reader_test.rb
(+30 files in other folders)
